--- a/signin.css
+++ b/signin.css
@@ -11,6 +11,9 @@
 }
 #gautam>.sonk>h1{
    text-align: center;
+   font-family: poppins;
+   font-size: 30px;
+   margin-bottom: 30px;
 }
 #gautam>.sonks{
     width: 100%;
@@ -27,7 +30,6 @@
     background-color: #3d5998;
     justify-content:space-between;
     align-items: center;
-    font-size: 14px;
     margin-top: 10px;
     
 }
@@ -35,11 +37,10 @@
     font-size: 27px;
     background-color:rgba(255, 255, 255, 0.1);
     border: 1px solid transparent;
-    /* border:1px solid; */
     padding:5px 15px;
 }
 #gautam>.sonks>a>span{
-    font-size: 18px;
+    font-size: 14px;
     margin-left: 15px;
 }
 #gautam>.sonks:nth-child(3)>a{
@@ -49,84 +50,109 @@
     padding: 10px;
 }
 #sonkp{
-    /* border: 1px solid red; */
     margin: 10px 0px;
+}
+#mess{
+    width:100%;
+    margin: 10px 0px 10px 0px;
 }
 #sonkp>#gform>input{
     height: 40px;
-    width: 99%;
+    width: 98%;
     border:0.1px solid lightgray;
+    padding-left: 7px;
+}
+#sonkp>#gform>input:focus{
+       outline-color:#e5b95f;
 }
 #sonkp>#gform>p{
     color: #7a7a7a;
     font-size: 13px;
     font-family: 'Poppins';
-    margin: 0 0 5px;
-    padding: 0 0 7px;
-    margin: 10px 0px;
-    /* border: 2px solid green; */
+    margin: 20px 0px 10px 0px ;
 }
 #sonkp>#gform>p>span{
     color: red;
 }
+
 #sonkp>#gform>input:last-child{
     background-color: #e5b95f;
     font-size: 1.1em;
     height: 40px;
     border: none;
     width: 100%;
-    &:hover{
-        background-color:o;
-    };
+
+}
+#sonkp>#gform>#req{
+    font-size: 14px;
+    font-family: poppins sans,sans-serif;
+    color: #dd4b39;
+}
+#sonkp>#gform>input:last-child:hover{
+    background-color: #000;
+    color: #fff;
 }
 .sonk{
     width: 1px solid pink;
     margin: auto;
 }
 .breakdiv{
-    height: 50%;
-    /* border: 5px solid; */
-}
-/* #break-login{
-    width: 100%; 
+    display: grid;
     margin: auto;
-    border-bottom: 1px solid #000; 
-    line-height: 0.1em;
-    margin: 10px 0 20px; 
-    height: 10px;
- }  */
- 
+    margin: 20px 0px 20px 0px;
+    justify-content: space-between;
+    align-items: center;
+    grid-template-rows: repeat(1,1fr);
+    grid-template-columns: repeat(3,1fr);
+    grid-template-areas: "a c b";
+}
+.breakdiv>hr:first-child{
+    grid-area: a;
+    height: 1px;
+    width: 130%;
+}
+.breakdiv>hr:last-child{
+    grid-area: b;
+    height: 1px;
+}
+.breakdiv>p{
+    grid-area: c;
+    margin-left: 50%;
+    width: 70%;
+    margin-top: -5px;
+    font-size: 16px;
+    font-family: sans-serif;
+}
+
  #break-login>span { 
-     /* border: 1px solid black; */
      background-color: #fff;
-     /* padding:  10px 5px 0px 5px; */
      align-items: center;
 
  }
-
-
-
-
- .son>button{
+ .son>a>button{
     width: 100%;
     background-color: #e5b95f;
     height: 40px;
     font-size: 1.1em;
     border: none;
  }
- .son>button:hover{
+ .son>a>button:hover{
     background-color: #000;
     color: #FFFFFF;
     border: none;
     cursor: pointer;
  }
+
  #sonkp>#gform>input:last-child:hover{
     background-color: #000;
     color: #fff;
     border: none;
     cursor: pointer;
  }
- #gautam>.sonks>a:hover{
-    background-color: transparent whitesmoke;
+ #gautam>.sonks:hover{
+    background-color:rgba(255, 255, 255, 0.1);
  }
 
+#sonkp>#gform>#req:hover{
+    text-decoration-color: #e5b95f;
+}
