--- a/The_Make.css
+++ b/The_Make.css
@@ -4,15 +4,15 @@
     padding: 0;
 }
 
-#main {
+#main_the {
     width: 80%;
+    /* position: absolute; */
     /* border: 1px solid red; */
     display: flex;
     margin: auto;
     justify-content: space-between;
     align-items: center;
-    margin-top: 50px;
-    z-index: 1;
+    margin-top:100px;
 }
 .price{
     display: flex;
@@ -119,13 +119,13 @@
     align-items: center;
     display: flex;
     transform: translateY(100%);
-    z-index: -1;
+    /* z-index: -1; */
 }
 
 .add>span {
     text-transform: uppercase;
     bottom: 60%;
-    z-index: 1;
+    /* z-index: 1; */
 }
 
 .add:hover {
@@ -310,6 +310,7 @@
     height: 30px;
     padding: 5px 0px;
     border: 0.5px solid #c7c6c6;
+    outline: #e5b95f;
 }
 .ap_review_form>input:hover{
     border: 0.5px solid #e5b95f;
