--- a/index.css
+++ b/index.css
@@ -149,15 +149,52 @@ text-align: left
     color: gray;
     
 }
-#test{
-width: 100%;
-height: 400px;
-border: 1px solid teal;
-background-color: rgb(244, 229,195);
-text-align: center;
-margin-bottom: 40px;
-
-}
+.test{
+    margin-top: 0px;
+    width: 100%;
+    height: 700px;
+    position: relative;
+ }
+ .test>img{
+     width: 100%;
+     height: 70%;
+ }
+ .test>button
+ {
+    position: absolute; 
+    top: 40%;
+    background-color:transparent;
+    font-size: 30px;
+    width: 30px;
+    height: 50px;
+    border: transparent;
+ }
+ .test>h1
+ {
+    position: absolute; 
+    top: 5%;
+    text-align: center;
+    font-size: 30px;
+    left: 40%;
+ }
+ .test>p
+ {
+    position: absolute; 
+    top: 36%;
+    text-align: center;
+    font-size: 30px;
+    left: 12%;
+ }
+ .test>:nth-child(2){
+     left: 15%
+ }
+ .test>:nth-child(3){
+     right: 11%;
+ }
+ .test>button:hover {
+     background-color: #a7906b;
+     color: black;
+ }
 #trend{
 text-align: center;
 margin: 50px 0px 50px 0px;
