--- a/futter.css
+++ b/futter.css
@@ -8,23 +8,23 @@
 
     .mayur{
 
-    width:89%;
+    width:100%;
     height:400px;
-   padding: 70px;
+   /* padding: 70px; */
    line-height: 35px;
-   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-   margin-top: 50px;
+   /* box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px; */
    margin: auto;
-
+  margin-top: 10%;
 
 
     }
     .tab{
     width:100%;
+    height: 100%;
     text-align: left;
-    font-size:21px;
+    font-size:17px;
     text-align: left;
-    padding-left: 60px;
+    padding-left: 15%;
     color:rgb(125, 125, 125);
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     
@@ -32,40 +32,32 @@
       h5{
 
          font-size: large;
-        margin-left: 420px;
+         text-align: center;
         color:rgb(125, 125, 125)
-
-        
-            
+       
         }
         img{
             width: 3%; 
-            color:rgb(125, 125, 125)
-
-            
+            color:rgb(125, 125, 125)   
         }
-    
             input{
-                width: 300px;
-                height: 40px;
-                border-radius: 10px;
+                width: 20%px;
+                height: 5%px;
+                border-radius: 1px;
                 box-shadow:rgb(224, 223, 223) 0px 5px 15px;
                 color:rgb(125, 125, 125);
                 font-size: 18px;
                 border-style: hidden;
                 outline-color: #ffa726;
-    
-
             }
-      
        .class1{
-        margin-left:520px;
-          font-size:35px;
-          border-radius: 25px;
+        margin-left:45%;
+          font-size:30px;
+          border-radius: 10px;
           color:rgb(125, 125, 125)
-
-
+          
         }
+        
         button{
     
             padding: 10px;
