--- a/futter.css
+++ b/futter.css
@@ -40,7 +40,7 @@
             width: 3%; 
             color:rgb(125, 125, 125)   
         }
-            input{
+            #minput{
                 width: 20%px;
                 height: 5%px;
                 border-radius: 1px;
@@ -58,7 +58,7 @@
           
         }
         
-        button{
+       #mbutton{
     
             padding: 10px;
            margin-left: 20px;
@@ -69,7 +69,7 @@
            border: 0px;
            height: 40px;
         }
-        button:hover{
+        #mbutton:hover{
             background-color:black;
         }
     
