--- a/signin.css
+++ b/signin.css
@@ -1,13 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap');
 
 
-*{
+/* *{
     margin: 0px;
     padding: 0px;
-}
+} */
 #gautam{
     margin: auto;
     width: 25%;
+    margin-top: 100px;
 }
 #gautam>.sonk>h1{
    text-align: center;
@@ -57,6 +58,9 @@
     width: 99%;
     border:0.1px solid lightgray;
 }
+#sonkp>#gform>input:focus{
+    outline-color:#e5b95f;
+}
 #sonkp>#gform>p{
     color: #7a7a7a;
     font-size: 13px;
@@ -75,42 +79,61 @@
     height: 40px;
     border: none;
     width: 100%;
-    &:hover{
-        background-color:o;
-    };
 }
+
 .sonk{
     width: 1px solid pink;
     margin: auto;
 }
+
 .breakdiv{
-    height: 50%;
-    /* border: 5px solid; */
-}
-/* #break-login{
-    width: 100%; 
+    display: grid;
     margin: auto;
-    border-bottom: 1px solid #000; 
-    line-height: 0.1em;
-    margin: 10px 0 20px; 
-    height: 10px;
- }  */
- 
+    margin: 20px 0px 20px 0px;
+    justify-content: space-between;
+    align-items: center;
+    grid-template-rows: repeat(1,1fr);
+    grid-template-columns: repeat(3,1fr);
+    grid-template-areas: "a c b";
+}
+.breakdiv>hr:first-child{
+    grid-area: a;
+    height: 1px;
+    width: 130%;
+}
+.breakdiv>hr:last-child{
+    grid-area: b;
+    height: 1px;
+}
+.breakdiv>p{
+    grid-area: c;
+    margin-left: 50%;
+    width: 70%;
+    margin-top: -5px;
+    font-size: 16px;
+    font-family: sans-serif;
+}
+
  #break-login>span { 
-     /* border: 1px solid black; */
      background-color: #fff;
-     /* padding:  10px 5px 0px 5px; */
      align-items: center;
 
  }
- .son>button{
+
+
+
+
+ .son>a>button{
     width: 100%;
     background-color: #e5b95f;
     height: 40px;
     font-size: 1.1em;
+    margin-left: 0px;
     border: none;
+    border-radius: 0px;
+    color: #000;
  }
- .son>button:hover{
+ .son>a>button:hover{
     background-color: #000;
     color: #FFFFFF;
     border: none;
